# wildwest

map-reduce/: main.py  pyproject.toml
map-reduce/src/map_reduce/: __init__.py  core.py
